refactor whenMatchAddedWithDifferentTeams_getShouldReturnIt_withZeroScores